# django-chroniker

./: pyproject.toml  requirements-min-django.txt
chroniker/: admin.py  models.py
